brain/sources/prod-metadata/objects/Candidate_Email__c/Candidate_Email__c.object-meta.xml
<CustomObject>
    <label>Candidate Email</label>
    <nameField>
        <label>Candidate Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>