brain/sources/prod-metadata/objects/Candidate_Email__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>