brain/sources/prod-metadata/objects/Candidate_Email__c/fields/Candidate_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email_Id__c</fullName>
    <label>Candidate Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>