brain/sources/prod-metadata/objects/Candidate_Email__c/fields/Email_Classification__c.field-meta.xml
<CustomField>
    <fullName>Email_Classification__c</fullName>
    <label>Email Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>