brain/sources/prod-metadata/objects/Candidate_Email__c/fields/Sender_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email_Id__c</fullName>
    <label>Sender Email_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>